plugins {
    id 'java-library'
    id 'eclipse'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(8))
    }
}

repositories {
    mavenCentral()
}



dependencies {
    testImplementation('junit:junit:4.13.2')
    testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
    testImplementation('org.junit.vintage:junit-vintage-engine:5.8.1')
}

test {
    useJUnitPlatform()
}
